feat: add auth token methods to the saml2 so the flows can be the same
